[workspace]
members = ["packages/*", "contracts/*"]

[workspace.package]
version       = "0.18.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/DidrikAngell/Contract"
homepage      = "https://demo.codedestate.com"
documentation = "https://demo.codedestate.com"
rust-version  = "1.65"

[workspace.dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std    = "1.2.1"
cw2             = "1.1.0"
cw20            = "1.1.0"
cw721           = { version = "0.18.0", path = "./packages/cw721" }
codedestate      = { version = "0.18.0", path = "./contracts/codedestate" }
cw-multi-test   = "0.16.5"
cw-ownable      = "0.5.1"
cw-storage-plus = "1.1.0"
cw-utils        = "1.0.1"
schemars        = "0.8.11"
serde           = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror       = "1.0.38"
[profile.release.package.codedestate]
codegen-units = 1
incremental   = false

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
